# deepjump

./: .gitignore  AGENTS.md  README.md  REPORT.md  pyproject.toml
cloud/: HUAWEI_CLOUD_PLAN.md  ckpt_to_obs.sh  download_data.sh  obs_roundtrip_test.sh  run_ddp.sh  stage_to_obs.sh  sync_from_obs.sh
configs/: ca_delta1.yaml  ca_delta10.yaml  confirmation_100_length_proportional_seed20260717.metadata.json  confirmation_100_length_proportional_seed20260717.txt  dev_20_length_proportional_seed0.metadata.json  dev_20_length_proportional_seed0.txt  external_context_9_root_cause.txt  external_dev_20_length_proportional_seed20260721.metadata.json  external_dev_20_length_proportional_seed20260721.txt  faithful_scaled.yaml  faithful_scaled_v2.yaml  full_delta1.yaml  full_delta1_allatom.yaml  full_delta1_aug.yaml  full_delta1_h64.yaml  full_delta1_unroll.yaml  full_delta1_unroll3.yaml  guarded_external_dev_20_length_proportional_seed20260722.metadata.json  guarded_external_dev_20_length_proportional_seed20260722.txt  heldout_endpoint_domain_seed0.txt  paper_h128_d1.yaml  paper_h128_d10.yaml  paper_h128_d100.yaml  paper_horizon_external_dev_20_length_proportional_seed20260723.metadata.json  paper_horizon_external_dev_20_length_proportional_seed20260723.txt  subset_1000.txt  subset_1000_length_proportional.txt  tiny_overfit_domain_1a0hA01.txt  v100_ddp_calibration.yaml  v100_ddp_smoke.yaml  v100_h128_d1.yaml  v100_lr_diag_nowarmup.yaml  v100_lr_diag_warmup200.yaml  v100_paper_d1.yaml  v100_paperstyle_d1_2000.yaml  v100_paperstyle_d1_500.yaml  v100_paperstyle_d1_smoke.yaml  (+44 more)
(+198 files in other folders)
